# simple-tools

./: .gitignore  .pre-commit-config.yaml  .simple-tools.yml  CHANGELOG.md  LICENSE  README.md  check_all.sh  check_mypy_again.sh  check_new_coverage.sh  check_ruff.sh  check_specific_errors.sh  check_status.sh  check_syntax.sh  commit_fixes.sh  commit_remaining_fixes.sh  duplicates.csv  final_commit.sh  final_fix_summary.md  final_type_fix.sh  fix_ruff.sh  fix_summary.md  list.json  organize_result.json  output.json  pyproject.toml  quick_check.sh  quick_coverage_check.sh  quick_mypy_check.sh  release_v0_2_0.sh  run_single_test.sh  run_tests.sh  test_fix_final_report.md  test_text_replace.sh  verify_fixes.sh
.github/workflows/: ci.yml
docs/: ai-configuration-guide.md  backup_restore_guide.md  config-integration-report.md  deepseek-api-reference.md  deepseek-integration-fixes.md  development.md  phase2-completion-summary.md  phase2-plan.md  phase2_cli_enhancements_summary.md  phase2_error_handling_summary.md  phase2_smart_confirm_summary.md  phase3-ai-enhancement-plan.md  phase3-classifier-complete.md  phase3-implementation-checklist.md  phase3-progress.md  phase3-summarizer-complete.md  phase3-week1-completion.md  phase3-week1-progress.md  phase3-week1-troubleshooting.md  phase3-week2-day1-2-complete.md  phase3-week2-plan.md  phase3-week7-complete.md  pypi-release.md  sample.txt  style-fix-report.md  summarize-user-guide.md  summarizer-test-fix-report.md  test-coverage-report.md  test-results-analysis.md  text-analyzer-user-guide.md
docs/第二阶段4-6板块儿开发方案材料/: 工具集成指南  性能优化系统  智能交互系统  现代化错误处理系统  简单工具集 - 第二阶段现代技术实施方案概述
src/simple_tools/: __init__.py  _typing.py  cli.py  config.py
src/simple_tools/ai/: __init__.py  classifier.py  config.py  deepseek_client.py  prompts.py  summarizer.py  text_analyzer.py  version_analyzer.py
src/simple_tools/core/: batch_rename.py  duplicate_finder.py  duplicate_finder.py.bak  file_organizer.py  file_tool.py  summarize_cmd.py  text_replace.py
src/simple_tools/utils/: __init__.py  config_loader.py  errors.py  formatter.py  performance_optimizer.py  progress.py  smart_interactive.py
tests/: __init__.py  conftest.py  test_ai_classifier.py  test_ai_integration.py  test_ai_module.py  test_backup_function.py  test_batch_rename.py  test_config.py  test_config_integration.py  test_config_loader.py  test_coverage_boost.py  test_coverage_boost.py.bak  test_coverage_final_push.py  test_duplicate_finder.py  test_duplicate_finder_ai.py  test_error_handling_paths.py  test_errors.py  test_file_organizer.py  test_file_organizer_cli.py  test_file_organizer_smart_confirm.py  test_file_tool.py  test_file_tool_format.py  test_format_integration.py  test_formatter.py  test_formatter_missing_coverage.py  test_helpers.py  test_init_simple.py  test_logfire_trace.py  test_performance_optimizer.py  test_phase2_integration.py  test_progress.py  test_simple_utilities.py  test_smart_interactive.py  test_smart_interactive_extended.py  test_summarize_cmd.py  test_summarizer.py  test_text_analyzer.py  test_text_replace.py  test_text_replace_additional.py  test_text_replace_cli.py  (+3 more)
tests/integration/: test_format_integration.py
